[gd_scene load_steps=9 format=3 uid="uid://b42cdt8riqtk8"]

[ext_resource type="Script" uid="uid://dwn5i5w1d4gln" path="res://scripts/Intereses.gd" id="1_udxmp"]
[ext_resource type="Texture2D" uid="uid://sk4edt1vteia" path="res://assets/scenes/mujer_BG.png" id="2_gavju"]
[ext_resource type="Texture2D" uid="uid://b48e4np3gntfa" path="res://assets/chat/mujer_movil_BG.png" id="3_uu14n"]
[ext_resource type="FontFile" uid="uid://dau58fdkdok2k" path="res://assets/fonts/Cherry_Bomb_One/CherryBombOne-Regular.ttf" id="4_m3t46"]
[ext_resource type="Texture2D" uid="uid://b5xdhws1vred3" path="res://assets/chat/mujer_manos.png" id="5_2t7eq"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_118yx"]
load_path = "res://.godot/imported/btnprincipal.png-0d6bc5cb90a54b55ae68453184990732.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_dg110"]
load_path = "res://.godot/imported/btnprincipal_deshabilitado.png-75c49434600ede597118355f299b8862.ctex"

[sub_resource type="LabelSettings" id="LabelSettings_dg110"]
font = ExtResource("4_m3t46")
font_size = 30

[node name="PantallaIntereses" type="Node2D"]
script = ExtResource("1_udxmp")

[node name="Mujer_Frame" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_gavju")
expand_mode = 3

[node name="Mujer_Movil" type="TextureRect" parent="."]
offset_left = 497.0
offset_top = 98.0
offset_right = 781.0
offset_bottom = 596.0
texture = ExtResource("3_uu14n")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Hobbies" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
offset_left = 515.0
offset_top = 188.0
offset_right = 762.0
offset_bottom = 465.0

[node name="Interes_deportes" type="TextureButton" parent="Control/Hobbies"]
layout_mode = 2
texture_normal = SubResource("CompressedTexture2D_118yx")
stretch_mode = 3

[node name="Interes_videojuegos" type="TextureButton" parent="Control/Hobbies"]
visible = false
layout_mode = 2
texture_normal = SubResource("CompressedTexture2D_118yx")
stretch_mode = 3

[node name="Interes_libros" type="TextureButton" parent="Control/Hobbies"]
visible = false
layout_mode = 2
texture_normal = SubResource("CompressedTexture2D_118yx")
stretch_mode = 3

[node name="Interes_cocina" type="TextureButton" parent="Control/Hobbies"]
visible = false
layout_mode = 2
texture_normal = SubResource("CompressedTexture2D_118yx")
stretch_mode = 3

[node name="Interes_cine" type="TextureButton" parent="Control/Hobbies"]
visible = false
layout_mode = 2
texture_normal = SubResource("CompressedTexture2D_118yx")
stretch_mode = 3

[node name="Interes_anime" type="TextureButton" parent="Control/Hobbies"]
visible = false
layout_mode = 2
texture_normal = SubResource("CompressedTexture2D_118yx")
stretch_mode = 3

[node name="ContinuarButton" type="TextureButton" parent="."]
offset_left = 515.0
offset_top = 473.0
offset_right = 754.0
offset_bottom = 539.0
texture_normal = SubResource("CompressedTexture2D_118yx")
texture_disabled = SubResource("CompressedTexture2D_dg110")

[node name="Label" type="Label" parent="ContinuarButton"]
layout_mode = 0
offset_left = 27.0
offset_top = 4.0
offset_right = 212.0
offset_bottom = 48.0
text = "Buscar Match"
label_settings = SubResource("LabelSettings_dg110")

[node name="Mujer_Manos" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("5_2t7eq")

[connection signal="pressed" from="Control/Hobbies/Interes_deportes" to="." method="_on_interes_deportes_pressed"]
[connection signal="pressed" from="Control/Hobbies/Interes_videojuegos" to="." method="_on_interes_videojuegos_pressed"]
[connection signal="pressed" from="Control/Hobbies/Interes_libros" to="." method="_on_interes_libros_pressed"]
[connection signal="pressed" from="Control/Hobbies/Interes_cocina" to="." method="_on_interes_cocina_pressed"]
[connection signal="pressed" from="Control/Hobbies/Interes_cine" to="." method="_on_interes_cine_pressed"]
[connection signal="pressed" from="Control/Hobbies/Interes_anime" to="." method="_on_interes_anime_pressed"]
[connection signal="pressed" from="ContinuarButton" to="." method="_on_continuar_button_pressed"]
